# OpenTitrator

./: .gitignore  LICENSE  README.md  backboard_3stepmotor.dxf  hardware-test.py  start.sh  滴定仪.rar
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: experiment.py  motor.py  pump.py  sensor.py  titration.py
backend/app/routers/: config.py  experiment.py  export.py  motor.py  pump.py  sensor.py  titration.py
backend/app/services/export/: csv_export.py  pdf_export.py
backend/app/services/hardware/: factory.py  mock_motor.py  mock_pump.py  mock_sensor.py  protocols.py  real_motor.py  real_pump.py  real_sensor.py
backend/app/services/storage/: database.py  experiments.py
backend/app/services/titration/: endpoint.py  engine.py
backend/app/ws/: manager.py  messages.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  experiment.ts  export.ts  motor.ts  pump.ts  sensor.ts  titration.ts
frontend/src/components/dashboard/: Dashboard.tsx
frontend/src/components/experiment/: ExperimentList.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/motor/: MotorPage.tsx
frontend/src/components/pump/: PumpPage.tsx
frontend/src/hooks/: useSensorData.ts  useTitration.ts  useWebSocket.ts
frontend/src/i18n/: LanguageContext.tsx  translations.ts
frontend/src/styles/: theme.ts
frontend/src/types/: experiment.ts  motor.ts  pump.ts  sensor.ts  titration.ts  websocket.ts
(+3 files in other folders)
